MODORDERS-1179. Fix sonar issues